--- a/movie-app/src/app/add-movie/add-movie.component.html
+++ b/movie-app/src/app/add-movie/add-movie.component.html
@@ -1,3 +1,31 @@
 <p>
   add-movie works!
 </p>
+
+<div class="col-md-6">
+  <h2 class="text-center">Add Movie</h2>
+  <form>
+    <div class="form-group">
+      <label for="title">Title:</label>
+      <input [(ngModel)]="movie.title" placeholder="Title" name="Title" class="form-control" id="title">
+    </div>
+
+    <div class="form-group">
+      <label for="director">Director:</label>
+      <input [(ngModel)]="movie.director" placeholder="Director" name="director" class="form-control" id="director">
+    </div>
+
+    <div class="form-group">
+      <label for="realiseDate">Release Date:</label>
+      <input [(ngModel)]="movie.releaseDate" placeholder="Realise Date jj/mm/aaaa" name="realiseDate" class="form-control" id="realiseDate">
+    </div>
+
+    <div class="form-group">
+      <label for="type">Type :</label>
+      <input [(ngModel)]="movie.type" placeholder="Type" name="type" class="form-control" id="type">
+    </div>
+
+    <button *ngIf="!id" class="btn btn-success" (click)="createMovie(movie)">Create</button>
+    <button *ngIf="id" class="btn btn-success" (click)="updateMovie(id,movie)">Update</button>
+  </form>
+</div>
