--- a/movie-app/src/app/app.component.html
+++ b/movie-app/src/app/app.component.html
@@ -19,8 +19,13 @@
 <!--</ul>-->
 
 <div class="container-fluid">
+
+
+
+
   <a routerLink="/movie"> List Of Movies</a>
   <a style="margin-left:10px" routerLink="/add">Add Movie</a>
+  <a style="margin-left:10px" routerLink="/">Home</a>
   <br/>
   <router-outlet></router-outlet>
 
