--- a/movie-app/src/app/movie/movie.component.html
+++ b/movie-app/src/app/movie/movie.component.html
@@ -1,26 +1,44 @@
-<div class="col-md-6">
-  <h2> Movies Details</h2>
+<div class="col-md-12">
 
-  <table class="table table-striped ">
-    <thead>
+  <div class="row">
+    <div class="col-md-10">
+      <h2> Movies Details</h2>
+    </div>
+    <div class="col-md-2">
+      <button class="btn-primary btn" routerLink="/add">Add Movie</button>
+    </div>
+  </div>
+
+  <br/>
+
+  <div class="row">
+    <div class="table-responsive">
+      <table class="table table-striped">
+        <thead>
         <tr>
           <th class="hidden">No</th>
           <th>Title</th>
           <th>Director</th>
           <th>Realise Date</th>
           <th>Type</th>
+          <th></th>
         </tr>
-    </thead>
-    <tbody>
+        </thead>
+        <tbody>
         <tr *ngFor="let movie of movies; let i=index">
           <td class="hidden">{{i}}</td>
           <td>{{movie.title}}</td>
           <td>{{movie.director}}</td>
           <td>{{movie.releaseDate}}</td>
           <td>{{movie.type}}</td>
-          <td><button class="btn btn-danger" (click)="deleteMovie(i)"> Delete</button></td>
-          <td><a routerLink="/update/{{i}}"> Update </a></td>
+          <td>
+            <button class="btn btn-danger" (click)="deleteMovie(i)"> Delete</button>
+            <br/>
+            <button class="btn btn-info" routerLink="/update/{{i}}"> Update </button>
+          </td>
         </tr>
-    </tbody>
-  </table>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
