--- a/movie-app/src/app/home-page/home-page.component.html
+++ b/movie-app/src/app/home-page/home-page.component.html
@@ -1,8 +1,49 @@
 <div class="jumbotron">
 
-  <h1>Welcome to movies</h1>
+  <h2>Welcome to Movie Library Assignment</h2> <br/>
 
-  Movie Library Assignment is a movie management application. The goal of this project is to make an evaluation
-  of my technical skills as a java full stack developper.
+  <div class="row">
+    <p>
+      <b>Movie Library Assignment</b> is a movie management application. The goal of this project is to evaluate my
+      technical skills as java full stack developper and other technologies such as <b>Angular Version 6, Spring
+      framework Version 2.5.1, Bootstrapp Version 4, Java Version 8, Json, Git (the basics), etc</b>.
+    </p>
+  </div>
 
+  <div class="row">
+      In this application we will be able to use some crud methods such as:
+  </div>
+
+  <div class="row">
+    <ol>
+      <li>The creation of a movie,</li>
+      <li>The removal of a film,</li>
+      <li>Updating a movie</li>
+      <li>Filter movies according to a research element etc</li>
+    </ol>
+  </div>
+
+  <div class="row">
+    The project is subdivided into two folders:
+  </div>
+
+  <div class="row">
+    <ol>
+      <li><b>movielibraryassignment</b> that contains all the backend side of the application,</li>
+      <li><b>movie-app</b> which is the client side using the restServices put together in 1</li>
+    </ol>
+  </div>
+
+  <h2>The way to compile/build/run it</h2> <br/>
+
+  <div class="row">
+    <ol>
+        <li>you must first clone the github repository in a folder of your machine,</li>
+        <li>then go to the folder movielibraryassignment "cd movielibraryassignment",</li>
+        <li>then execute the command "mvn spring-boot: run",</li>
+        <li>then go back to the main file,</li>
+        <li>go to the movie-app folder "cd movie-app" do "ng serve --open" or "ng serve",</li>
+        <li>open an internet browser and enter the link http: // localhost: 4200</li>
+    </ol>
+  </div>
 </div>
