--- a/movie-app/src/app/home-page/home-page.component.html
+++ b/movie-app/src/app/home-page/home-page.component.html
@@ -41,7 +41,7 @@
         <li>you must first clone the github repository in a folder of your machine,</li>
         <li>then go to the folder movielibraryassignment "cd movielibraryassignment",</li>
         <li>then execute the command "mvn spring-boot: run",</li>
-        <li>then go back to the main file,</li>
+        <li>then go back to the main directory,</li>
         <li>go to the movie-app folder "cd movie-app" do "ng serve --open" or "ng serve",</li>
         <li>open an internet browser and enter the link http: // localhost: 4200</li>
     </ol>
