--- a/movie-app/src/app/home-page/home-page.component.html
+++ b/movie-app/src/app/home-page/home-page.component.html
@@ -17,7 +17,7 @@
   <div class="row">
     <ol>
       <li>The creation of a movie,</li>
-      <li>The removal of a film,</li>
+      <li>The removal of a movie,</li>
       <li>Updating a movie</li>
       <li>Filter movies according to a research element etc</li>
     </ol>
