--- a/movie-app/src/app/home-page/home-page.component.html
+++ b/movie-app/src/app/home-page/home-page.component.html
@@ -39,6 +39,7 @@
   <div class="row">
     <ol>
         <li>you must first clone the github repository in a folder of your machine,</li>
+        <li>cd to maltem,</li>
         <li>then go to the folder movielibraryassignment "cd movielibraryassignment",</li>
         <li>then execute the command "mvn spring-boot: run",</li>
         <li>then go back to the main directory,</li>
